[project]
authors = [{name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no"}]
dependencies = []
name = "era5land_to_datm"
description = "Tools to download ERA5 Land meteorology files and convert to DATM forcing data for use with NorESM / CTSM"
requires-python = ">= 3.13"
version = "0.1.0"

[project.urls]
Repository = "https://github.com/ciceroOslo/era5land_to_datm"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
era5land_to_datm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ecmwf-datastores-client = ">=0.4.1"
xarray = ">=2025.11.0"
h5netcdf = ">=1.7.3"
cftime = ">=1.6.4"
bottleneck = ">=1.6.0"
numbagg = ">=0.9.3"
dask = ">=2025.11.0"
cfgrib = ">=0.9.15.1"
python = ">=3.13.9"

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"
ipython = "*"

[tool.pixi.environments]
default = ["dev", "default"]
